--- a/ArrayADT/ArrayADT/ArrayADT.vcxproj
+++ b/ArrayADT/ArrayADT/ArrayADT.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Array.c" />
     <ClCompile Include="helpers.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
