--- a/ArrayADT/ArrayADT.vcxproj
+++ b/ArrayADT/ArrayADT.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{4585d0c5-947a-43a2-94ab-4e96b4eede23}</ProjectGuid>
     <RootNamespace>ArrayADT</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>ArrayADT</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
